--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     background-color: black;
-    background-image: url("https://images5.alphacoders.com/901/901108.png");
+    background-image: url("https://res.cloudinary.com/dofkj8qo6/image/upload/v1671317193/901108_1_ubdsn6.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center top;
