--- a/public/index.css
+++ b/public/index.css
@@ -10,6 +10,6 @@ body{
 ul li a{
     color:white;
 }
-.armorBox{
-    background-color: red;
+.armorBG{
+    background-image: url("https://res.cloudinary.com/dofkj8qo6/image/upload/v1671320940/armorBG_uczhik.jpg");
 }
