--- a/public/index.css
+++ b/public/index.css
@@ -27,6 +27,14 @@ ul li a{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
+.item-stack{
+    display: grid;
+    grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));
+}
+.item-box2{
+    margin: 10px;
+    transition: .8s;
+}
 .armorBox{
     background-color: red;
 }
