--- a/public/index.css
+++ b/public/index.css
@@ -7,6 +7,10 @@ body{
     background-position: center top;
 }
 
+h2{
+    font-family: Marcellus Sc, sans-serif !important;
+}
+
 ul li a{
     color:white;
 }
