--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0;
     background-color: black;
     background-image: url("https://res.cloudinary.com/dofkj8qo6/image/upload/v1671390188/BG-main_hsimfa.jpg");
@@ -7,44 +7,79 @@ body{
     background-position: center top;
 }
 
-h2{
+h2 {
     font-family: Marcellus Sc, sans-serif !important;
 }
 
-ul li a{
-    color:white;
+ul li a {
+    color: white;
 }
-.armorBG{
+
+.armorBG {
     background-image: url("https://res.cloudinary.com/dofkj8qo6/image/upload/v1671320940/armorBG_uczhik.jpg");
     background-size: cover;
 }
-.item-box{
+
+.item-box {
     margin: 10px;
     transition: .8s;
 }
-.item-box:hover{
-    transform: scale(1.3);
+
+.item-box:hover {
+    transform: scale(1.15);
     z-index: 2;
     background-color: #393d45;
 }
-.item-grid{
+
+.item-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
-.item-stack{
+
+.item-stack {
     display: grid;
     grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));
 }
-.item-box2{
+
+.item-box2 {
     margin: 10px;
     transition: .8s;
 }
-.armorBox{
+
+.armorBox {
     background-color: red;
 }
 
-.weapon-container-outer{
+.weapon-container-outer {
     display: flex;
     border: 2px solid black;
     justify-content: space-between;
+}
+
+.cllps {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+}
+
+.active,
+.cllps:hover {
+    background-color: #ccc;
+}
+
+.cllps-content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+}
+
+.MHW-font {
+    font-family: Marcellus sc;
 }
