--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
-    background-color: black;
-    background-image: url("https://res.cloudinary.com/dofkj8qo6/image/upload/v1671390188/BG-main_hsimfa.jpg");
+    background-image: url('https://res.cloudinary.com/dofkj8qo6/image/upload/v1671670128/BG-1_tokb5h.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center top;
@@ -15,39 +14,20 @@ ul li a {
     color: white;
 }
 
-.armorBG {
-    background-image: url("https://res.cloudinary.com/dofkj8qo6/image/upload/v1671320940/armorBG_uczhik.jpg");
-    background-size: cover;
+.jp-shadow {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.item-box {
-    margin: 10px;
-    transition: .8s;
+.bg-blur {
+    backdrop-filter: blur(25px)
 }
 
-.item-box:hover {
-    transform: scale(1.15);
-    z-index: 2;
-    background-color: #393d45;
+.item {
+    transition: transform 1s;
 }
 
-.item-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-}
-
-.item-stack {
-    display: grid;
-    grid-template-rows: repeat(auto-fill, minmax(150px, 1fr));
-}
-
-.item-box2 {
-    margin: 10px;
-    transition: .8s;
-}
-
-.armorBox {
-    background-color: red;
+.item:hover {
+    transform: scale(1.3);
 }
 
 .weapon-container-outer {
@@ -91,7 +71,7 @@ ul li a {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
+    box-shadow: inset 0 0 5px #191919;
     border-radius: 10px;
 }
 
@@ -103,5 +83,78 @@ ul li a {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: darkgrey;
+    background: grey;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.link {
+    cursor: pointer;
+    position: relative;
+    white-space: nowrap
+}
+
+.link::before,
+.link::after {
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: currentColor;
+    top: 100%;
+    left: 0;
+    pointer-events: none;
+}
+
+.link::before {
+    content: '';
+    /* show by default */
+}
+
+.link--elara {
+    font-family: Marcellus sc;
+}
+
+.link--elara::before {
+    transform-origin: 50% 100%;
+    transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+    clip-path: polygon(0% 0%, 0% 100%, 0 100%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%, 100% 100%, 100% 0%);
+}
+
+.link--elara:hover::before {
+    clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 50% 0, 50% 0, 50% 100%, 50% 100%, 0 100%, 100% 100%, 100% 0%);
+}
+
+.link--elara span {
+    display: inline-block;
+    transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+}
+
+.link--elara:hover span {
+    transform: translate3d(0, -2px, 0);
 }
